fixed text-align

--- a/Css/Index.css
+++ b/Css/Index.css
@@ -48,7 +48,7 @@
 /* image-container */
 .title-text {
     font-size: 40px;
-    padding: 10px 0 30px;
+    padding: 10px 0px;
     color: rgb(253, 174, 27);
 }
 
@@ -140,8 +140,9 @@
         height: 600px;
     }
 
-    .title-text {
-        padding: 20px;
+
+    .left-section {
+        padding: 10px;
     }
 
     /* img */
@@ -153,7 +154,9 @@
 
     }
 
-
+    .offer-section {
+        text-align: center;
+    }
 
     .offer-content {
         height: 100%;
@@ -162,6 +165,7 @@
         justify-content: center;
         align-items: center;
     }
+
 
     .offer-content img {
         width: 300px;
